syntax = "proto3";
package bitbadges.bitbadgeschain.badges;

import "gogoproto/gogo.proto";
import "badges/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/bitbadges/bitbadgeschain/x/badges/types";

// uintRange is a range of IDs from some start to some end (inclusive).
// 
// uintRanges are one of the core types used in the BitBadgesChain module.
// They are used for evrything from badge IDs to time ranges to min / max balance amounts.
message UintRange {
  string start = 1 [(gogoproto.customtype) = "Uint", (gogoproto.nullable) = false ];
  string end = 2 [(gogoproto.customtype) = "Uint", (gogoproto.nullable) = false];
}

// Balance represents the balance of a badge for a specific user.
// The user amounts xAmount of a badge for the badgeID specified for the time ranges specified.
//
// Ex: User A owns x10 of badge IDs 1-10 from 1/1/2020 to 1/1/2021.
// 
// If times or badgeIDs have len > 1, then the user owns all badge IDs specified for all time ranges specified.
message Balance {
  string amount = 1  [(gogoproto.customtype) = "Uint", (gogoproto.nullable) = false];
  repeated UintRange ownershipTimes = 2;
  repeated UintRange badgeIds = 3;
}

message MustOwnBadges {
  string collectionId = 1 [(gogoproto.customtype) = "Uint", (gogoproto.nullable) = false];

  UintRange amountRange = 2;
  repeated UintRange ownershipTimes = 3;
  repeated UintRange badgeIds = 4;

  bool overrideWithCurrentTime = 5;

  bool mustOwnAll = 6;
}