syntax = "proto3";
package bitbadges.bitbadgeschain.badges;

import "google/protobuf/any.proto";
import "badges/balances.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/bitbadges/bitbadgeschain/x/badges/types";

message BadgeMetadata {
  string uri = 1;
  string customData = 2;
  repeated IdRange badgeIds = 3;
}

message CollectionMetadata {
  string uri = 1;
  string customData = 2;
}

message OffChainBalancesMetadata {
  string uri = 1;
  string customData = 2;
}